--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DISCORD_BOT_TOKEN=MTI2OTQxOTY2NTEzNDk4MTI1MQ.Gc8r40.l9QpvZCNtoUtyBcs3-_Q1NbZQlqG4T1BayVIGw
+DISCORD_BOT_TOKEN=xxx
 CLIENT_ID=1269419665134981251
 CLIENT_SECRET=JgtCqeer5bcIttfrwMd5NImKx1OWyuRF
 REDIRECT_URI=http://localhost:3000/callback
