--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DISCORD_BOT_TOKEN=xxx
+DISCORD_BOT_TOKEN=your_discord_bot_token
 CLIENT_ID=1269419665134981251
 CLIENT_SECRET=JgtCqeer5bcIttfrwMd5NImKx1OWyuRF
 REDIRECT_URI=http://localhost:3000/callback
